--- a/mastodon-client/templates/timeline.html
+++ b/mastodon-client/templates/timeline.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <title>Timeline</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+    <script src="https://unpkg.com/htmx.org@1.9.2"
+        integrity="sha384-L6OqL9pRWyyFU3+/bjdSri+iIphTN/bvYyM37tICVyOJkWZLpP2vGn6VUEXgzg6h"
+        crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/hyperscript.org@0.9.8"></script>
 </head>
 
 <body>
@@ -17,19 +21,17 @@
             </nav>
         </header>
         <main>
+            <div id="reply-modal"></div>
             {% for toot in toots %}
-            <article>
-                <header>{{ toot.account.display_name }} ({{ toot.account.acct }})</header>
-                {{ get_content(toot) | safe }}
-                {% if (toot.media_attachments | length) > 0 %}
-                {% for attachment in toot.media_attachments %}
-                <img src="{{ attachment.url }}" />
-                {% endfor %}
-                {% endif %}
-                {% if is_reply(toot) %}
-                <footer>Replying to {{ get_in_reply_to(toot) }}</footer>
-                {% endif %}
-            </article>
+
+            {% if is_reply(toot) %}
+            {% include "_replypost.html" %}
+            {% elif is_reblog(toot) %}
+            {% include "_reblogpost.html" %}
+            {% else %}
+            {% include "_basepost.html" %}
+            {% endif %}
+
             {% endfor %}
         </main>
     </div>
