mastodon-client: check in some stuff

--- a/mastodon-client/templates/timeline.html
+++ b/mastodon-client/templates/timeline.html
@@ -16,7 +16,7 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="#" role="button">Settings</a></li>
+                    <li><a href="/settings" role="button">Settings</a></li>
                     <li><a href="#" role="button" _="on click add @open to #post-modal">Post</a></li>
                 </ul>
             </nav>
