--- a/mastodon-client/templates/_replypost.html
+++ b/mastodon-client/templates/_replypost.html
@@ -1,5 +1,8 @@
 <article>
-    <header>{{ toot.account.display_name }} ({{ toot.account.acct }}) replied to {{ get_in_reply_to(toot) }}</header>
+    <header>
+        <img src="{{ toot.account.avatar_static}}" class="avatar" />
+        {{ toot.account.display_name }} ({{ toot.account.acct }}) replied to {{ get_in_reply_to(toot) }}
+    </header>
     {% include "_postcontent.html" %}
     <footer>
         {% include "_postbuttons.html" %}
