--- a/mastodon-client/templates/timeline.html
+++ b/mastodon-client/templates/timeline.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Timeline</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script src="https://unpkg.com/htmx.org@1.9.2"
         integrity="sha384-L6OqL9pRWyyFU3+/bjdSri+iIphTN/bvYyM37tICVyOJkWZLpP2vGn6VUEXgzg6h"
         crossorigin="anonymous"></script>
@@ -22,7 +23,9 @@
             </nav>
         </header>
         <main>
+            {# modal for replying to posts #}
             {% include "_reply.html" %}
+            {# modal for creating a new post #}
             {% include "_post.html" %}
             {% for toot in toots %}
 
