mastodon-client: mock out more of the settings page

--- a/mastodon-client/templates/settings.html
+++ b/mastodon-client/templates/settings.html
@@ -33,11 +33,18 @@
                         <b>Config</b>
                         <table>
                             <tr>
-                                <td>Key 1</td>
-                                <td>Value 1</td>
+                                <label for="val2">Key 1</label>
+                                <input type="text" id="val2" value="Val 1" />
+                            </tr>
+                            <tr>
+                                <label for="val2">Key 2</label>
+                                <input type="text" id="val2" value="Val 2" />
                             </tr>
                         </table>
-                        <button>Disable</button>
+                        <div class="grid">
+                            <button>Disable</button>
+                            <button>Save</button>
+                        </div>
                     </article>
                 </details>
             </article>
